corrigiendo algunos bugs en Fabrica, añadiendo diagrama de la entrega 2